--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "test": "node shortly.js & ./node_modules/.bin/mocha --bail --reporter nyan test/ServerSpec.js; pkill -n node;"
   },
   "dependencies": {
+    "basic-auth": "^1.0.3",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "1.0.8",
     "body-parser": "^1.5.2",
     "bookshelf": "~0.6.4",
     "chai": "^1.9.0",
+    "cookie-parser": "^1.3.5",
+    "cookieparser": "^0.1.0",
     "ejs": "~0.8.5",
     "express": "~4.0.0",
     "express-partials": "~0.2.0",
